# batchman

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
batchman/: app.py  batchman.tcss  command_providers.py  main.py
batchman/lib/: batch.py
batchman/modals/: confirmation_screen.py  message_popup_screen.py  message_screen.py  selector_screen.py  text_input_screen.py  view_text_screen.py
batchman/widgets/: job_filter.py  job_table.py
