[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchman"
version = "0.1.0"
description = "AWS Batch job explorer and manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["boto3>=1.24.95", "natsort>=8.4.0", "textual[syntax]==1.0.0"]

[project.scripts]
batchman = "batchman.main:main"
